# ROS_KUKA_env

./: README.md
gazebo_objects/goal/: model.sdf
gazebo_objects/unit_box/: model.config  model.sdf
kuka_experimental/kuka_kr6_support/meshes/kr6r900sixx/visual/: gripper_body.stl
kuka_experimental/kuka_kr6_support/urdf/: kr6.urdf  kr6r900sixx_macro.xacro
kuka_experimentalo/kuka_kr6_support/: CMakeLists.txt
kuka_experimentalo/kuka_kr6_support/meshes/kr6r900sixx/visual/: priruba.stl
kuka_experimentalo/kuka_resources/: CMakeLists.txt
kuka_gazebo/: CMakeLists.txt  package.xml
kuka_gazebo/config/: gazebo_controllers.yaml
kuka_gazebo/launch/: gazebo_basic.launch  gazebo_moveit.launch  kuka_gazebo_controllers.launch  kuka_world.launch
kuka_gazebo/worlds/: kuka.world  kukapush.world
kuka_moveit_config/: .setup_assistant  package.xml
kuka_moveit_config/config/: controllers_gazebo.yaml  joint_limits.yaml  kinematics.yaml  kuka_kr6r900sixx.srdf  ompl_planning.yaml  ros_controllers.yaml
kuka_moveit_config/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  kuka_kr6r900sixx_moveit_controller_manager.launch.xml  kuka_planning_execution.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kuka_push/: CMakeLists.txt  package.xml
kuka_push/include/kuka_push/: include.h  kukapush_env_lib.h  marker.h
kuka_push/launch/: agent_training.launch  environment.launch
kuka_push/msg/: rlplugin_msg.msg
kuka_push/plugin/: goalgazebo.cpp  goalgazebo.h  pushobject.cpp  pushobject.h
kuka_push/saved_model/: checkpoint  sac_KUKAPush_trained_model.index
kuka_push/scripts/: kuka_agent.py  kuka_trained.py  test.py
kuka_push/scripts/logs/: events.out.tfevents.1587123195.tomas-MS7B18  events.out.tfevents.1587123797.tomas-MS7B18
kuka_push/src/: kukapush_env.cpp  kukapush_env_lib.cpp  marker.cpp
kuka_push/srv/: object_reset.srv  rl_env.srv
kuka_sac/: CMakeLists.txt  package.xml
kuka_sac/config/: hyperparameters.yaml  kuka.rviz
kuka_sac/include/kuka_sac/: include.h  kuka_env_interface.h  kuka_env_movement.h  marker.h
kuka_sac/launch/: aruco_test.launch
kuka_sac/saved_model/: checkpoint  sac_KUKAReach_trained_model.index
kuka_sac/scripts/: ReplayBuffer.py  config.py  core.py  kuka_agent.py  kuka_trained.py
kuka_sac/scripts/logs/: events.out.tfevents.1584478069.tomas-MS7B18  events.out.tfevents.1584552207.tomas-MS7B18  events.out.tfevents.1586691062.tomas-MS7B18  events.out.tfevents.1586691102.tomas-MS7B18  events.out.tfevents.1586698247.tomas-MS7B18  events.out.tfevents.1586698351.tomas-MS7B18  events.out.tfevents.1586699144.tomas-MS7B18  events.out.tfevents.1586703409.tomas-MS7B18  events.out.tfevents.1586703527.tomas-MS7B18  events.out.tfevents.1586703839.tomas-MS7B18  events.out.tfevents.1586703983.tomas-MS7B18  events.out.tfevents.1586704449.tomas-MS7B18  events.out.tfevents.1586704656.tomas-MS7B18  events.out.tfevents.1586704767.tomas-MS7B18  events.out.tfevents.1586704860.tomas-MS7B18  events.out.tfevents.1586704946.tomas-MS7B18  events.out.tfevents.1586705025.tomas-MS7B18  events.out.tfevents.1586705547.tomas-MS7B18  events.out.tfevents.1586705670.tomas-MS7B18  events.out.tfevents.1586705825.tomas-MS7B18
kuka_sac/scripts/obnovenie/: events.out.tfevents.1581254433.tomas-MS7B18
kuka_sac/src/: kuka_env.cpp  kuka_env_interface.cpp  kuka_env_movement.cpp  marker.cpp
kuka_sac/srv/: service.srv
rl_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
rl_rviz_plugin/include/rl_rviz_plugin/: rl_rviz_plugin.h
rl_rviz_plugin/src/: rl_rviz_plugin.cpp
